<resources>
    <string name="app_name">Alqema</string>
    <!-- Strings related to Creation -->
    <string name="confirm">Confirm</string>
    <string name="creation">Creation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scroller_for_inputs">ScrollerForInputs</string>
    <string name="add_account">Add Account</string>
    <string name="editing_account">Editing Account</string>
    <string name="account_details">Account Details</string>
    <string name="account_detail">Account Detail</string>
    <string name="categorize_account">Categorize Account</string>
    <string name="add_category">Add Category</string>
    <string name="editing_category">Editing Category</string>
    <string name="category_details">Category Details</string>
    <string name="add_units">Add Units</string>
    <string name="first_unit">First Unit</string>
    <string name="second_unit">Second Unit</string>
    <string name="category_unit">Category Unit</string>

    <string name="creation_btn" translatable="false">Creation Btn</string>
    <string name="display_btn" translatable="false">Display Btn</string>

    <!--ID-foreach-->

    <!--Tab-->
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <!--Display-->
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="customer_num">Customer Number</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="belongs_to_account">Belongs to account</string>
    <string name="account_nature">Account Nature</string>
    <string name="account_type">Account Type</string>
    <string name="account_currency">Account Currency</string>
    <string name="search_accounts">Search Accounts</string>
    <string name="search_categories">Search Categories</string>
    <string name="search_by_names">Search by names</string>
    <string name="search_by_numbers">Search by Id-numbers</string>
    <!--Category,Unit-->
    <string name="barcode">Barcode</string>
    <string name="main_unit">Main Unit</string>
    <string name="selling_price">Selling Price</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="unit_name">Unit Name</string>
    <string name="quantity_of_unit">Quantity Of Unit</string>
    <string name="unit_price">Unit Price</string>
    <string name="unit_barcode">Unit Barcode</string>
    <!--Message-->
    <string name="empty_fields_message">Check all required fields!</string>
    <string name="created_message">Saved Successfully ✔</string>
    <string name="kindly_take_into_account_the_long_click_on_the_item_for_data_editing">kindly take into account the Long Click on the Item for Data Editing</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_delete">Do you really want to Delete!?</string>
    <string name="query_s">Queries</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="receipt_details">Receipt details</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="receipt_account_number">Receipt Account Number</string>
    <string name="receipt_categories">Receipt Categories</string>
    <string name="pick_category">Pick Category</string>
    <string name="total">Total</string>
    <string name="pick_account">Pick Account</string>

    <string name="number">Number</string>
    <string name="category_got_added">Category got added:</string>
    <string name="category_got_removed">Category got removed:</string>
    <string name="search_receipts">Search Receipts</string>


    <!--SpinnerD-->
    <string-array name="AccountDetails">
        <item>Dealers</item>
        <item>Customer</item>
        <item>Expenses</item>
        <item>Employees</item>
    </string-array>
    <!--Spinner1-->
    <string-array name="AccountNature">
        <item>Debtor Only</item>
        <item>Creditor Only</item>
        <item>Debtor &amp; Creditor</item>
    </string-array>
    <!--Spinner2-->
    <string-array name="AccountType">
        <item>Balance Sheet</item>
        <item>Profit &amp; Loss</item>
        <item>Trade</item>
        <item>Employment</item>
        <item>Revenues &amp; Expenses</item>
        <item>Receivables Or Creditors</item>
        <item>Agents &amp; Distributors</item>
        <item>Project</item>
    </string-array>
    <!--Spinner3-->
    <string-array name="AccountCurrency">
        <item>NIS</item>
        <item>USD</item>
        <item>JOD</item>
        <item>EGP</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>JPY</item>
        <item>AED</item>
        <item>SAR</item>
        <item>QAR</item>
        <item>KWD</item>
        <item>BHD</item>
        <item>OMR</item>
        <item>LBP</item>
        <item>TRY</item>
        <item>INR</item>
        <item>ZAR</item>
        <item>SGD</item>
        <item>NZD</item>
    </string-array>


    <string name="receipt_button_dialog_title">Receipts</string>
    <string name="count">Count</string>
    <string name="to_view_the_associated_categories_hold_click_on_any_item">Hold clicking any item to see the related categories.</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_account_number">Payment Account Number</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="amount">Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="payments">Payments</string>
    <string name="event_expand_item" translatable="false">Event Expand Item</string>
    <string name="balance">Balance</string>
    <string name="home_selected_image" translatable="false">the image of the user actions</string>
    <string name="choose_action" translatable="false">choose action</string>

    <!--HomeButtons-->
    <!--Creation-->
    <string name="create_account">Create Account</string>
    <string name="create_category">Create Category</string>
    <string name="create_receipt">Create Receipt</string>
    <string name="create_payment">Create Payment</string>
    <!--Display-->
    <string name="display_account">Display accounts</string>
    <string name="display_category">Display categories</string>
    <string name="display_receipt">Display receipts</string>
    <string name="display_payment">Display payments</string>
    <string name="scan_a_qrcode">Scan QRCode / BarCode</string>
</resources>