<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.dialogs.choose.DisplayBottomSheetDialogFragment">

    <!--ScreenContainer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDisplayAccounts"
            style="@style/AppDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accounts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDisplayCategory"
            style="@style/AppDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDisplayUnits"

            style="@style/AppDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_units" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>