<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.creation_ui.account.AddAccountFragment">
    <!--#############################################################-->

    <!--GuidelinesStarts-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_17sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_17sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

    <!--GuidelinesEnds-->

    <!--#############################################################-->

    <!--ScreenContainer-->
    <LinearLayout
        android:id="@+id/screenContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_begin"
        app:layout_constraintTop_toTopOf="@+id/guide_top">

        <!--Title-->
        <TextView
            android:id="@+id/title"
            style="@style/AppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textAlignment="center"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <!--ScrollerContainer-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scroller_for_inputs">

            <!--ScrollerContainer-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Group1-->
                <LinearLayout
                    android:id="@+id/form_group1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="vertical">

                    <!--InnerTitle1-->
                    <TextView
                        android:id="@+id/inner_title_1"
                        style="@style/AppTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_details"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <!--#################################################################-->
                    <!--TextLayout1-ID-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="ID"
                        app:helperText="@string/id"
                        app:placeholderText="@string/id">
                        <!--InputEditText1-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAccountId"
                            style="@style/AppTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            tools:hint="Enter Here" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--TextLayout2-Name-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Name"
                        app:helperText="@string/name"
                        app:placeholderText="@string/name">
                        <!--InputEditText2-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAccountName"
                            style="@style/AppTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:hint="Enter Here" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--TextLayout4-Address-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Address"
                        app:helperText="@string/address"
                        app:placeholderText="@string/address">
                        <!--InputEditText4-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAccountAddress"
                            style="@style/AppTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:hint="Enter Here" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--TextLayout5-MobileNumber-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Mobile Number"
                        app:helperText="@string/mobile"
                        app:placeholderText="@string/mobile">
                        <!--InputEditText5-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAccountMobileNumber"
                            style="@style/AppTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:hint="Enter Here" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--TextLayout6-Belongs to account-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Belongs to account"
                        app:helperText="@string/belongs_to_account"
                        app:placeholderText="@string/belongs_to_account">
                        <!--InputEditText6-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAccountBelongsAccount"
                            style="@style/AppTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:hint="Enter Here" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <!--Group2-->
                <LinearLayout
                    android:id="@+id/form_group2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="vertical">

                    <!--InnerTitle1-->
                    <TextView
                        android:id="@+id/inner_title_2"
                        style="@style/AppTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categorize_account"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <!--Sp-Details-Layout-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Details"
                        app:helperText="@string/account_detail"
                        app:placeholderText="@string/account_detail">
                        <!--SpinnerDetails-->
                        <Spinner
                            android:id="@+id/spAccountDetails"
                            style="@style/AppSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/AccountDetails" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Sp-Nature-Layout-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Nature"
                        app:helperText="@string/account_nature"
                        app:placeholderText="@string/account_nature">
                        <!--SpinnerNature-->
                        <Spinner
                            android:id="@+id/spAccountNature"
                            style="@style/AppSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/AccountNature"
                            android:minHeight="@dimen/_48sdp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Sp-Type-Layout-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Type"
                        app:helperText="@string/account_type"
                        app:placeholderText="@string/account_type">
                        <!--SpinnerType-->
                        <Spinner
                            android:id="@+id/spAccountType"
                            style="@style/AppSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/AccountType" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Sp-Currency-Layout-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="Currency"
                        app:helperText="@string/account_currency"
                        app:placeholderText="@string/account_currency">
                        <!--SpinnerCurrency-->
                        <Spinner
                            android:id="@+id/spAccountCurrency"
                            style="@style/AppSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/AccountCurrency" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!--ConfirmButton-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_begin" />

</androidx.constraintlayout.widget.ConstraintLayout>